# test2

binary_io/: CMakeLists.txt
binary_io/include/: my_struct.h  reader.h  writter.h
binary_io/src/: main.cpp  reader.cpp  writter.cpp
